# bevy_vox

./: .gitignore  Cargo.toml  README.md
assets/: 2x2x2.vox
examples/: load_vox.rs
src/: lib.rs  loader.rs
