[package]
name = "bevy_vox"
version = "0.7.0"
authors = ["erasin <erasinoo@gmail.com>"]
edition = "2021"
description = "Load MagicaVoxel Vox file for bevy engine "
license = "MIT"
repository = "https://github.com/erasin/bevy_vox"
documentation = "https://docs.rs/bevy_vox"
readme = "README.md"
keywords = ['voxel', 'MagicaVoxel', 'game', 'bevy']
exclude = ["assets", "examples"]

[dependencies]
bevy_ecs = { version = "0.10" }
bevy_app = { version = "0.10" }
bevy_asset = { version = "0.10" }
bevy_render = { version = "0.10" }
bevy_utils = { version = "0.10" }
bevy_pbr = { version = "0.10" }
bevy_scene = { version = "0.10" }
bevy_transform = { version = "0.10" }
bevy_hierarchy = { version = "0.10" }
anyhow = "1.0"
thiserror = "1.0"
dot_vox = "4.1"

[dev-dependencies]
bevy = { version = "0.10" }
