[package]
name = "bevy_vox"
version = "0.8.0"
authors = ["erasin <erasinoo@gmail.com>"]
edition = "2021"
description = "Load MagicaVoxel Vox file for bevy engine "
license = "MIT"
repository = "https://github.com/erasin/bevy_vox"
documentation = "https://docs.rs/bevy_vox"
readme = "README.md"
keywords = ['voxel', 'MagicaVoxel', 'game', 'bevy']
exclude = ["assets", "examples"]

[[bin]]
name = "example"
test = false
bench = false
path = "examples/load_vox.rs"

[dependencies]
bevy = { version = "0.12.0"}
anyhow = "1.0.75"
thiserror = "1.0.50"
dot_vox = "4.1"

[dev-dependencies]
bevy = { version = "0.10" }
