[package]
name = "bevy_vox"
version = "0.9.0"
authors = ["erasin <erasinoo@gmail.com>"]
edition = "2021"
description = "Load MagicaVoxel Vox file for bevy engine "
license = "MIT"
repository = "https://github.com/erasin/bevy_vox"
documentation = "https://docs.rs/bevy_vox"
readme = "README.md"
keywords = ['voxel', 'MagicaVoxel', 'game', 'bevy']
exclude = ["assets", "examples"]

[[example]]
name = "load_vox"
path = "examples/load_vox.rs"

[dependencies]
bevy = { version = "0.14", default-features = false, features = ["bevy_asset", "bevy_scene","bevy_pbr"] }
thiserror = "1"
dot_vox = "5.1"

[dev-dependencies]
bevy = { version = "0.14" }
